# recall-dsis-client

./: .gitignore  README.md  config.py  main.py  pyproject.toml
.github/: CODEOWNERS
secrets/: password  user_id
secrets.template/: password  user_id
src/: authenticate.py  dsis_client.py
src/repositories/: dsis_log.py  get_repository.py  log_interface.py
src/use_cases/: logs.py
