[tool.poetry]
name = "recall-dsis-client"
version = "0.1.0"
description = ""
authors = ["Paul Trygsland <ptry@equinor.com>"]
readme = "README.md"
packages = [{include = "recall_dsis_client"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
requests = "^2.28.1"
protobuf = "^4.21.7"
urllib3 = "^1.26.12"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
